--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hernán Velázquez
+name: Not a Number
 
 # Short bio or description (displayed in the header)
-description: Bioengineer 99%, python programmer
+description: Blog de programación y cosas random
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://bananascoop.files.wordpress.com/2012/05/aang12.jpg
@@ -19,11 +19,11 @@ avatar: https://bananascoop.files.wordpress.com/2012/05/aang12.jpg
 footer-links:
   dribbble:
   email: azhernan@hotmail.com
-  facebook:
+  facebook: azhernan@hotmail.com
   flickr:
   github: azhernan
   instagram: azhernan
-  linkedin:
+  linkedin: azhernan@hotmail.com
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: azhernan
